--- a/package.yaml
+++ b/package.yaml
@@ -1,11 +1,11 @@
-name: resizedisk
+name: projecta
 version: '0.1.0.0'
 category: Web
 author: Author name here
 maintainer: example@example.com
 copyright: 2017 Author name here
 license: BSD3
-github: shokohara/haskell-resizedisk
+github: shokohara/haskell-projecta
 extra-source-files:
 - README.md
 library:
@@ -14,23 +14,35 @@ library:
   - App
   dependencies:
   - base >=4.7 && <5
+  - bytestring
+  - yaml
   - aeson
   - aeson-casing
+  - process
   - servant-server
   - text
   - monad-logger
   - transformers
   - wai-logger
-  - time ==1.6.0.1
-  - wreq
+  - aeson-pretty
+  - gogol
+  - gogol-core
+  - gogol-compute
+  - gogol-pubsub
+  - random
+  - gogol-storage
   - http-client
-  - http-client-tls
+  - conduit
+  - conduit-extra
   - lens
+  - resourcet
+  - here
   - lens-aeson
   - HDBC
   - HTTP
+  - uuid
 executables:
-  resizedisk-exe:
+  projecta-exe:
     main: Main.hs
     source-dirs: app
     ghc-options:
@@ -39,15 +51,13 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - base
-    - resizedisk
+    - projecta
     - wai-logger
-    - servant-server
-    - servant
     - wai
     - text
     - warp
 tests:
-  resizedisk-test:
+  projecta-test:
     main: Spec.hs
     source-dirs: test
     ghc-options:
@@ -56,7 +66,7 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - base
-    - resizedisk
+    - projecta
     - hspec
     - hspec-discover
     - hspec-wai
