--- a/package.yaml
+++ b/package.yaml
@@ -1,11 +1,11 @@
-name: projecta
+name: resizedisk
 version: '0.1.0.0'
 category: Web
 author: Author name here
 maintainer: example@example.com
 copyright: 2017 Author name here
 license: BSD3
-github: shokohara/haskell-projecta
+github: shokohara/haskell-resizedisk
 extra-source-files:
 - README.md
 library:
@@ -42,7 +42,7 @@ library:
   - HTTP
   - uuid
 executables:
-  projecta-exe:
+  resizedisk-exe:
     main: Main.hs
     source-dirs: app
     ghc-options:
@@ -51,13 +51,13 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - base
-    - projecta
+    - resizedisk
     - wai-logger
     - wai
     - text
     - warp
 tests:
-  projecta-test:
+  resizedisk-test:
     main: Spec.hs
     source-dirs: test
     ghc-options:
@@ -66,7 +66,7 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - base
-    - projecta
+    - resizedisk
     - hspec
     - hspec-discover
     - hspec-wai
