--- a/package.yaml
+++ b/package.yaml
@@ -25,7 +25,7 @@ library:
   - lens
   - resourcet
 executables:
-  resizedisk-exe:
+  resizedisk:
     main: Main.hs
     source-dirs: app
     ghc-options:
