--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,9 @@ addons:
     packages:
     - libgmp-dev
 before_install:
-- mkdir -p ~/.local/bin
-- export PATH=$HOME/.local/bin:$PATH
-- travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards
-  --strip-components=1 -C ~/.local/bin '*/stack'
-install:
-- stack setup
+- ci/before_intall.sh
 script:
-- stack --no-terminal test --no-haddock-deps
+- ci/script.sh
 deploy:
   provider: releases
   api_key:
