--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ addons:
 before_install:
 - ci/before_install.sh
 script:
-- ci/script.sh
+- ci/script.bash
+# https://docs.travis-ci.com/user/deployment/releases/
 deploy:
   provider: releases
   api_key:
